After CMF 1.5.7 

  Bug Fixes

    - Backported test fix from 2.1 branch which suppresses race conditions
      in date-based topic criteria tests.

    - Fixed DST-driven test breakage in CMFCalendar by adding an optional
      'zone' argument to the DublineCore methods which return string
      rednitions of date metadata.
      (http://www.zope.org/Collectors/CMF/476)

    - Fixed broken PUT handling for CMFCalendar Events
      (http://www.zope.org/Collectors/CMF/458)

    - CMFSetup.workflow: Split out subdirectory when exporting workflow
      scripts.
      (http://www.zope.org/Collectors/CMF/373)

  Others

    - CMFDefault.Portal:  Reverted deprecation of 'manage_addCMFSite', added
      in CMF 1.5.5-beta, because it violates the policy / expectation that
      features are added / deprecated only at "second-dot" releases.

CMF 1.5.7 (08/27/06)

  No changes from 1.5.7-beta


CMF 1.5.7-beta (08/17/06)

  Bug Fixes

    - CMFCore.CatalogTool: Added 'cmf_uid' method to IndexableObjectWrapper
      so that CMFUid UIDs are not acquired during indexing.
      (http://www.zope.org/Collectors/CMF/446)

    - CMFCore.PortalContent:  '_guessAliases' may leave type information
      with a default alias of '(Default)';  work around that case.
      (http://www.zope.org/Collectors/CMF/445)

    - CMFCore.CatalogTool:  Removed import of LOG object from ZCatalog in
     favor of the new 'logger' pattern using Python's logging module.

    - Forward-ported fix for DCWorkflow global actions missing IDs
      (http://www.zope.org/Collectors/CMF/308).

    - CMFCore Expression: Fixed 'request' provided by expression contexts.
      'request' was not set correctly if 'object' is not specified.

    - CMFCore.interfaces.portal_workflow: Corrected the API given for
      WorkflowDefinition.isActionSupported.
      (http://www.zope.org/Collectors/CMF/407)

    - A re-used variable name led to rendering errors in some cases
      (http://www.zope.org/Collectors/CMF/411)
